--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1><strong>About Me</strong></h1>
-            <img src="imgs/스크린샷 2024-09-27 215509.png" alt="Me" width="150" height="150">
+            <img src="imgs/me.png" alt="Me" width="150" height="150">
         </header>
         <ul>
             <li><h2>My Personal Information</h2></li>
