--- a/SF.html
+++ b/SF.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<htm lang="en">
+<html lang="en">
     <head>
         <title>Sunflower</title>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
             <li><a href="STS.html">Steal The Show-Lauv</a></li>
             <li><a href="Hide.html">Hide-Juice WRLD</a></li>     
         </ol>
-        <img src="SF.JPG" alt="Picture in Spider Man New Unicverse" title="Spider Mans" style="width:40%;">
+        <img src="SF.JPG" alt="Picture in Spider Man New Universe" title="Spider Mans" style="width:40%;">
         <h2><a href="https://www.youtube.com/watch?v=ApXoWvfEYVU"
         target="_blank"><strong>Sunflower</strong></a>(Post Malone, Swae Lee)</h2> 
         <p>Ayy, ayy, ayy, ayy (ooh)<br>
