--- a/STS.html
+++ b/STS.html
@@ -37,7 +37,7 @@
         <p>So if it's real<br>
         Then darlin' let me know<br>
         I wouldn't mind<br>
-        If you steal the show<br>
+        If you steal the show</p>
         <p>So if it's real<br>
         Then darling let me know<br>
         I wouldn't mind<br>
@@ -54,7 +54,7 @@
         And steal the show</p>
         <p>So if it's real<br>
         Then darlin' let me know<br>
-        I wouldn't mind</p>
+        I wouldn't mind<br>
         If you steal the show (started out on a one way train)<br>
         (Always knew where I was gonna go next)</p>
         <p>So if it's real (didn't know until I saw your face)<br>
